<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalcRVP</string>
    <string name="action_settings">Settings</string>

    <string name="field_text">0</string>
    <string name="result">Результат</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="res">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="multiply">*</string>
    <string name="devision">/</string>
    <string name="degree">x^</string>
    <string name="remainder">mod</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="point">.</string>
    <string name="backspace">bks</string>
    <string name="memory_plus">M+</string>
    <string name="memory_read">MR</string>
    <string name="memory_clear">MC</string>
    <string name="result_miss_parenthesis">Неверное количество скобок!</string>
    <string name="result_forget_after_signs">Вы забыли после знака указать числовое значение!</string>
    <string name="memory_add_nothing_save">Нечего сохранять!</string>
</resources>
